<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_us_EMAIL"
        android:textAllCaps="true"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_vertical"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:text="@string/branch_email"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_gravity="center_vertical"
            android:layout_height="30dp"
            android:src="@mipmap/ic_email"
            android:contentDescription="email button" />
        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Phone_secretary"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_vertical"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:text="@string/secretary_phone_num"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_gravity="center_vertical"
            android:layout_height="30dp"
            android:src="@mipmap/ic_phone"
            android:contentDescription="email button" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Feedback"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center_vertical"/>
    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:lines="1"
    android:layout_marginTop="10dp"
    android:hint="@string/subjectline"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="5"
        android:hint="@string/details"
        android:layout_marginTop="10dp"
        android:gravity="top"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_but"
        android:padding="15dp"
        android:background="@color/white"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="@color/light_blue"/>




</LinearLayout>