<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ieee_logo"
        android:background="@drawable/ieee_logo"
        android:layout_gravity="center_horizontal" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_ieee"
            style="@style/IEEEHeading" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_ieee_description"
            style="@style/IEEEDescription"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/benefits_ieee"
            style="@style/IEEEHeading"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/benefits_ieee_description"
                style="@style/IEEEDescription"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="What societies can I be a part of?"
                style="@style/IEEEHeading" />
            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="I'm sold how can I join?"
                style="@style/IEEEHeading" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Place Holder"
                style="@style/IEEEDescription"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Join"
                    android:gravity="center"/>
                <Button
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Renew"
         />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>