<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="bluescreen1.ieeeuwisb.MainActivity$PlaceholderFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:layout_margin="2dp"
        android:background="@color/black"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/imageView"
            android:background="@mipmap/account_light"
            android:layout_gravity="center"
            android:contentDescription="@string/account_layout_image_desc" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/username"
        android:layout_marginTop="25dp"
        android:id="@+id/userName"
        android:layout_gravity="center_horizontal" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            >
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Email"
        android:gravity="end"
        android:textStyle="bold"
        android:textColor="@color/light_grey"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="testemail@testdomain.com"
                android:gravity="center"
                android:textColor="@color/light_grey"
                android:id="@+id/userEmail"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="7dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/IEEENumber"
                android:gravity="end"
                android:textColor="@color/light_grey"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/light_grey"
                android:gravity="center"
                android:id="@+id/userIEEE"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="7dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Groups"
                android:gravity="end"
                android:textColor="@color/light_grey"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/light_grey"
                android:gravity="center"
                android:id="@+id/userGroups"
                />
        </TableRow>


    <ImageButton
        android:layout_width="100dp"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:id="@+id/editUser"
        android:src="@drawable/wrench"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:contentDescription="Edit" />

    </LinearLayout>

</LinearLayout>