<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center">

    <TextView
        android:text="Edit User"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:textSize="30sp"
        android:scaleType="center"
        android:gravity="center"
        android:background="@color/medium_light_blue"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/username"
        android:id="@+id/textView3"
        android:layout_gravity="left" />

    <EditText
        android:id="@+id/editusername"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/username" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/emailedit"
        android:layout_marginTop="10dp"
        android:id="@+id/textView4"
        android:layout_gravity="left" />

    <EditText
        android:id="@+id/edituseremail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="Email Address" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/num"
        android:layout_marginTop="10dp"
        android:id="@+id/textView5"
        android:layout_gravity="left" />

    <EditText
        android:id="@+id/editusernumber"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="IEEE Number" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <Button
                android:layout_width="90dp"
                android:layout_marginLeft="80dp"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:background="#fff"
                android:id="@+id/cancelbutton" />

            <Button
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="Accept"
                android:background="#fff"
                android:id="@+id/acceptbutton" />


        </TableRow>
    </TableLayout>

</LinearLayout>